[tool.poetry]
name = "pdz_tool"
version = "0.1.0"
description = "A tool for reading and transforming PDZ 24 and PDZ 25 formats"
authors = ["Bruno Ducraux <bruno.drx@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bducraux/pdz-tool"
keywords = ["pdz", "format", "transformation"]

packages = [
    { include = "pdz_tool" }
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"

[tool.poetry.dev-dependencies]
pytest = "^8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"