[tool.poetry]
name = "pdz-tool"
version = "0.2.4"
description = "A tool for reading and transforming PDZ 24 and PDZ 25 formats"
authors = ["Bruno Ducraux <bruno.drx@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bducraux/pdz-tool"
keywords = ["pdz", "format", "transformation"]

packages = [
    { include = "pdz_tool" }
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdz-tool = "pdz_tool.cli:main"